--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <section class="skills">
             <h2>Skills</h2>
             <ul id="skills-list">
-                <!-- JavaScript will populate this -->
+                <!-- JavaScript will populate  -->
             </ul>
         </section>
 
